FIX: Align css to reflect AA css transitions Phase 2 project requirements

--- a/your-code.css
+++ b/your-code.css
@@ -21,9 +21,13 @@
     width: auto;
     margin-left: 200px;
     /* Your code here */
+    transition: transform 2s;
 }
 
-/* Create astronaut hover animation here
+/* Create astronaut hover animation here */
+.astronaut_svg:hover {
+    transform: translateX(100px);
+}
 
 /* ======= BONUS ======= */
 
